fix: fix sticky, move overflow hidden to hook

--- a/src/styles/components/_hook.scss
+++ b/src/styles/components/_hook.scss
@@ -2,6 +2,7 @@
 
 .hook {
 	width: 100vw;
+	overflow-x: hidden;
 
 	& .signature {
 		translate: -10% -30%;
