--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,6 @@ html {
 
 body {
 	margin: 0;
-	overflow-x: hidden;
 }
 
 *, *:before, *:after {
